--- a/Django/core/templates/pages/kaoricompra.html
+++ b/Django/core/templates/pages/kaoricompra.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Compra</title>
     {%load static%}
-
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 </head>
@@ -29,22 +28,9 @@
           <div class="owl-stage-outer owl-height" style="height: 640px;">
             <div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s; width: 640px;">
               <div class="owl-item active" style="width: 640px;">
-                <img src="{% static 'img/kaorifig.jpg'%}" class="img-fluid">
+                <img "https://cdnx.jumpseller.com/pockettomarket/image/33972771/resize/640/640?1680880022" srcset="https://cdnx.jumpseller.com/pockettomarket/image/33972771/resize/640/640?1680880022 1x, https://cdnx.jumpseller.com/pockettomarket/image/33972771/resize/1280/1280?1680880022 2x" alt="‼Preventa‼ Figura Miyazono Kaori Coreful"class="img-fluid">
               </div>
             </div>
-          </div>
-          <div class="owl-nav disabled">
-            <button type="button" role="presentation" class="owl-prev disabled">
-              <i class="fas fa-angle-left">
-              </i>
-            </button>
-            <button type="button" role="presentation" class="owl-next disabled">
-              <i class="fas fa-angle-right">
-              </i>
-            </button>
-          </div>
-          <div class="owl-dots disabled">
-
           </div>
         </div>
         </div>
@@ -105,37 +91,7 @@
             </div>
             
           </div>
-  
-          
-  
-          <div class="form-group product-stock product-available row no-gutters  hidden">
-            
-            <div class="col-lg-8 col-sm-7">
-              <div class="offcanvas offcanvas-end" id="demo">
-                <div class="offcanvas-header">
-                  <h1 class="offcanvas-title">Carrito</h1>
-                  <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"></button>
-                </div>
-                <div class="offcanvas-body ">
-                  <br>
-                  <h2>Ingrese la Cantidad</h2>
-                  <br>
-                  <label for="cantidad">Figura Kaori Miyazono:</label>
-                  <input type="number" id="cantidad" name="cantidad" min="1" max="10">
-                  <br>
-                  <br>
-                  <a href="{% url 'iniciosesion'%}" class="btn btn-secondary btn-sm btn-block " title="Comprar" > Comprar</a>
-                </div>
-              </div>
-              
-              <!-- Button to open the offcanvas sidebar -->
-              <button class="btn btn-primary my-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#demo">
-                Añadir al Carrito
-              </button>
-              
-            </div>
-            <div class="col-12 disclaimer text-center mt-2">Solo quedan <strong> 20 </strong> unidades de este producto</div>
-          </div>
+          {% include 'base/carrito.html' %} 
         </div>
       </div>
       <script type="text/javascript">
