--- a/Django/core/templates/pages/preguntasF.html
+++ b/Django/core/templates/pages/preguntasF.html
@@ -10,7 +10,6 @@
 </head>
 <body id="navssss">
   {% include 'base/header.html' %} 
-
     <div class="container-fluid" id="formulario3">
         <div class="p-5 rounded">
           <h1>Preguntas Frecuentes</h1> 
@@ -18,10 +17,8 @@
     </div>
     <section class="section1 p-3">
         <img src="{% static 'img/fondo2.gif'%}" width="700px">
-
     </section>
     <div id="accordion" class="p-5">
-
         <div class="card py-3" id="formulario2">
           <div class="card-header bg-warning-subtle">
             <a class="btn" data-bs-toggle="collapse" href="#collapseOne">
@@ -60,8 +57,9 @@
             </div>
           </div>
         </div>
+      </div>
     </div>
     {% include 'base/footer.html' %} 
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 </html>
