--- a/Django/core/templates/pages/pages/plantillaBase.html
+++ b/Django/core/templates/pages/pages/plantillaBase.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
 </head>
 
-<body>
+<body id="navssss">
     {% include 'base/header.html'%}
     <main>
         <div class="container">
