--- a/Django/core/templates/pages/index.html
+++ b/Django/core/templates/pages/index.html
@@ -19,9 +19,9 @@
             <h2>
                 Tienda de Duoc UC de figuras de anime Shonen
             </h2>
-            <a href="" class="banner-btn">Más información</a>
-        </section>
-    
+            <a href="{% url 'crud'%}"  class="banner-btn">admin</a>
+          </section>
+        
       <div class="w-100">
         <div id="carouselExampleCaptions" class="carousel slide w-50 mx-auto">
           <div class="carousel-indicators">
