--- a/Django/core/templates/pages/crud.html
+++ b/Django/core/templates/pages/crud.html
@@ -10,13 +10,23 @@
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
 </head>
 
-<body id="navssss">
+<body>
     {% include 'base/header.html'%}
     <main>
         <div class="container">
             <div class="row">
                 <div class="col-md-8 shadow-lg mx-auto text-center p-3">
-                    <h2 class="my-3">Lista Usuarios</h2>
+                    <h2 class="my-3">Lista Usuarios</h2><br>
+                    {% if request.user.is_authenticated %}
+                    <h3>Bienvenido {{request.user.username}}</h3>
+                    <a href="{% url 'logout' %}">
+                        <button class="btn btn-danger my-3">
+                            Cerrar Sesion
+                        </button>
+                    </a>
+                    {% else%}
+                    <h3>Bienvenido Invitado</h3>
+                    {% endif%}
                     <table class="table table-dark table-hover table-bordered">
                         <thead>
                             <th>Rut</th>
