--- a/Django/core/templates/pages/genero_add.html
+++ b/Django/core/templates/pages/genero_add.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css'%}">
 </head>
 
-<body id="navssss">
+<body>
     {% include 'base/header.html'%}
     <main>
         <div class="container">
@@ -22,12 +22,12 @@
                             {{form.as_p}}
                         </div>
                         {% if mensaje%}
-                        <div class="alert alert-warning w-50 mx-auto text-center">
+                        <div class="alert alert-success w-50 mx-auto text-center">
                             {{mensaje}}
                         </div>
                         {% endif%}
                         <div class="mt-3">
-                            <button type="submit" class="btn btn-warning">Modificar</button>
+                            <button type="submit" class="btn btn-success">Agregar</button>
                             <a href="{% url 'crud_genero'%}"><button type="button"
                                     class="btn btn-secondary">Volver</button></a>
                         </div>
@@ -37,6 +37,7 @@
         </div>
     </main>
     {% include 'base/footer.html'%}
+
     <script src='{% static 'js/bootstrap.bundle.min.js' %}'></script>
 </body>
 
