--- a/Django/core/templates/pages/crud.html
+++ b/Django/core/templates/pages/crud.html
@@ -65,7 +65,7 @@
                         </button>
                     </a>
                     <a href="{% url 'crud_figura' %}">
-                        <button class="btn btn-bg-warning">
+                        <button class="btn btn-warning">
                             Ver figuras
                         </button>
                     </a>
