--- a/Django/core/templates/pages/crud_anime.html
+++ b/Django/core/templates/pages/crud_anime.html
@@ -18,8 +18,8 @@
                 <div class="col-md-8 shadow-lg mx-auto text-center p-3">
                     <table class="table table-dark table-hover table-bordered">
                         <thead>
-                            <th>ID Genero</th>
-                            <th>Genero</th>
+                            <th>ID Anime</th>
+                            <th>Anime</th>
                             <th>Modificar</th>
                             <th>Eliminar</th>
                         </thead>
@@ -44,7 +44,7 @@
                     </div>
                     {% endif%}
                     <a href="{% url 'anime_add' %}"><button class="btn btn-primary">Agregar Anime</button></a>
-                    <a href="{% url 'crud'%}"><button class="btn btn-secondary">Volver</button></a>
+                    <a href="{% url 'crud_figura'%}"><button class="btn btn-secondary">Volver</button></a>
                 </div>
             </div>
         </div>
