--- a/Django/core/templates/pages/crud_figura.html
+++ b/Django/core/templates/pages/crud_figura.html
@@ -50,15 +50,15 @@
                         <button class="btn btn-primary">Agregar Registro</button>
                     </a>
                     <a href="{% url 'crud' %}">
-                        <button class="btn btn-info">
+                        <button class="btn btn-secondary">
                             Volver
                         </button>
                     </a>
                     <a href="{% url 'crud_anime' %}">
-                        <button class="btn btn-primary">Ver Anime</button>
+                        <button class="btn btn-success">Ver Anime</button>
                     </a>
                     <a href="{% url 'crud_marca' %}">
-                        <button class="btn btn-primary">Ver Marca</button>
+                        <button class="btn btn-info">Ver Marca</button>
                     </a>
                 </div>
             </div>
