--- a/Django/core/templates/pages/crud_marca.html
+++ b/Django/core/templates/pages/crud_marca.html
@@ -44,7 +44,7 @@
                     </div>
                     {% endif%}
                     <a href="{% url 'marca_add' %}"><button class="btn btn-primary">Agregar Marca</button></a>
-                    <a href="{% url 'crud'%}"><button class="btn btn-secondary">Volver</button></a>
+                    <a href="{% url 'crud_figura'%}"><button class="btn btn-secondary">Volver</button></a>
                 </div>
             </div>
         </div>
