--- a/Django/core/templates/pages/index.html
+++ b/Django/core/templates/pages/index.html
@@ -19,7 +19,7 @@
             <h2>
                 Tienda de Duoc UC de figuras de anime Shonen
             </h2>
-            <a href="{% url 'crud'%}"  class="banner-btn">admin</a>
+            <a href="{% url 'login'%}"  class="banner-btn">admin</a>
           </section>
         
       <div class="w-100">
