--- a/Django/core/templates/pages/figura_add.html
+++ b/Django/core/templates/pages/figura_add.html
@@ -33,8 +33,8 @@
                         </div>
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <select class="form-select" id="marca" name="marca">
-                                {% for tmp in marcas %}
-                                <option value="{{tmp.id_marca}}">{{tmp.marca}}</option>
+                                {% for tmp2 in marcas %}
+                                <option value="{{tmp2.id_marca}}">{{tmp2.marca}}</option>
                                 {% endfor %}
                             </select>
                             <label for="marca" class="form-label">Marca</label>
