--- a/Django/core/templates/pages/index.html
+++ b/Django/core/templates/pages/index.html
@@ -14,7 +14,7 @@
     <main>
         <section class="banner" id="ban">
             <h1>
-                Bienvenidos.
+                Bienvenidos   (PROFE TIENE QUE CREAR UN USUARIO DESDE ADMIN).
             </h1>
             <h2>
                 Tienda de Duoc UC de figuras de anime Shonen
