--- a/Django/core/templates/pages/login.html
+++ b/Django/core/templates/pages/login.html
@@ -21,7 +21,7 @@
                         <h2>Login de Acceso</h2>
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="text" class="form-control" id="username" name="username" placeholder="">
-                            <label for="username" class="form-label">Usuario</label>
+                            <label for="username" class="form-label">Rut </label>
                         </div>
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="password" class="form-control" id="password" name="password" placeholder="">
