--- a/Django/core/templates/base/header.html
+++ b/Django/core/templates/base/header.html
@@ -1,58 +1,66 @@
-
-{%load static%}
+{% load static %}
 <header id="navssss">
     <!-- Inicio -->
-    <nav class=" navbar navbar-expand-lg" id="letras">
-    <div class="container-fluid" id="letras" > 
-        <a class="navbar-brand" href="{% url 'index'%}">
-        <img class="card_img" src="{% static 'img/logodef.png'%}"  width="100" />
-        </a>
-        <button
-        class="navbar-toggler  border-white bg-white"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-        >
-        <span class="navbar-toggler-icon bg-white" ></span>
-        </button>
-        <div class="navss collapse navbar-collapse" id="navbarSupportedContent" >
-        <ul class="navbar-nav mx-auto mb-2 mb-lg-0 h2"  >
-            <li class="nav-item " >
-            <a class="nav-link active text-white" aria-current="page" href="{% url 'index'%}"
-                >Inicio</a
-            >
-            </li>
-            <li class="nav-item ">
-            <a class="nav-link text-white" href="{% url 'catalogo'%}">Catalogo</a>
-            </li>
-            <li class="nav-item ">
-                <a class="nav-link text-white" href="{% url 'iniciocliente' %}">Iniciar Sesión</a>
-            </li>
-            <li class="nav-item dropdown ">
-            <a
-                class="nav-link dropdown-toggle text-white"
-                href="{% url 'catalogo'%}"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-            >
-            Más información
+    <nav class="navbar navbar-expand-lg" id="letras">
+        <div class="container-fluid" id="letras"> 
+            <a class="navbar-brand" href="{% url 'index' %}">
+                <img class="card_img" src="{% static 'img/logodef.png' %}" width="100" />
             </a>
-            <ul class="dropdown-menu text-bg-dark">
-            <li><a class="dropdown-item text-white" href="{% url 'somos'%}">Quienes somos?</a></li>
-            <li><a class="dropdown-item text-white" href="{% url 'preguntasF'%}">Preguntas Frecuentes</a></li>
-            </ul>
-            <li class="nav-item">
-                <a class="nav-link text-white" href="{% url 'carrito' %}">
-                    <i class="fas fa-shopping-cart"></i> Carrito
-                </a>
-            </li>
-        </ul>
+            <button
+                class="navbar-toggler border-white bg-white"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon bg-white"></span>
+            </button>
+            <div class="navss collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mx-auto mb-2 mb-lg-0 h2">
+                    <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="{% url 'index' %}">
+                            Inicio
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'catalogo' %}">Catalogo</a>
+                    </li>
+                    {% if request.user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'carrito' %}">
+                            Carrito de Compras
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'logout' %}">
+                            Cerrar Sesión!
+                        </a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="{% url 'login' %}">Iniciar Sesión</a>
+                    </li>
+                    {% endif %}
+                    <li class="nav-item dropdown">
+                        <a
+                            class="nav-link dropdown-toggle text-white"
+                            href="{% url 'catalogo' %}"
+                            role="button"
+                            data-bs-toggle="dropdown"
+                            aria-expanded="false"
+                        >
+                            Más información
+                        </a>
+                        <ul class="dropdown-menu text-bg-dark">
+                            <li><a class="dropdown-item text-white" href="{% url 'somos' %}">Quienes somos?</a></li>
+                            <li><a class="dropdown-item text-white" href="{% url 'preguntasF' %}">Preguntas Frecuentes</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </div>
-    </div>
     </nav>
     <!-- Fin -->
 </header>
