--- a/Django/core/templates/pages/catalogo.html
+++ b/Django/core/templates/pages/catalogo.html
@@ -26,10 +26,15 @@
                     <div class="card-body d-block w-100">
                         <h5 class="card-title">{{ figura.nombre_figura }}</h5>
                         <p class="card-text">Precio: {{ figura.precio }}</p>
+                        {% if request.user.is_authenticated %}
                         <a href="{% url 'agregar_al_carrito' figura.id_figura %}"
                             class="btn btn-primary">Añadir al Carrito</a>
-                            
+                        {%else%}
+                        <h5>Se mostrara añadir al carrito una vez iniciada la sesion al igual que el carrito arriba</h5>
+
+                        {%endif%}
                     </div>
+
                 </div>
             </div>
             {% endfor %}
