--- a/Django/core/templates/pages/login.html
+++ b/Django/core/templates/pages/login.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mantenedor</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css'%}">
-    <link rel="stylesheet" href="{% static 'css/style.css'%}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 
 <body>
-    {% include 'base/header.html'%}
+    {% include 'base/header.html' %}
     <main>
         <div class="container">
             <div class="row">
@@ -21,29 +21,28 @@
                         <h2>Login de Acceso</h2>
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="text" class="form-control" id="username" name="username" placeholder="">
-                            <label for="username" class="form-label">Rut </label>
+                            <label for="username" class="form-label">Correo</label>
                         </div>
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="password" class="form-control" id="password" name="password" placeholder="">
                             <label for="password" class="form-label">Contraseña</label>
                         </div>
                         {% if mensaje %}
-                        <div class='{{design}}'>
-                            {{mensaje}}
+                        <div class='{{ design }}'>
+                            {{ mensaje }}
                         </div>
-                        {% endif%}
+                        {% endif %}
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <button type="submit" class="btn btn-primary">Ingresar</button>
                         </div>
                     </form>
-
                 </div>
             </div>
         </div>
     </main>
-    {% include 'base/footer.html'%}
+    {% include 'base/footer.html' %}
 
-    <script src='{% static 'js/bootstrap.bundle.min.js' %}'></script>
+    <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
