--- a/Django/core/templates/pages/user_add.html
+++ b/Django/core/templates/pages/user_add.html
@@ -20,8 +20,8 @@
                     <form action="{% url 'user_add' %}" method="POST" class="form-floating">
                         {% csrf_token %}
                         <div class="form-floating mb-3 w-25 mx-auto">
-                            <input type="text" class="form-control" id="rut" name="rut">
-                            <label for="rut" class="form-label">Rut</label>
+                            <input type="email" class="form-control" id="username" name="username">
+                            <label for="username" class="form-label">Correo</label>
                         </div>
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="text" class="form-control" id="nombre" name="nombre">
@@ -36,21 +36,14 @@
                             <label for="appMaterno" class="form-label">Apellido Materno</label>
                         </div>
                         <div class="form-floating mb-3 w-25 mx-auto">
-                            <input type="date" class="form-control" id="fecha" name="fecha">
-                            <label for="fecha" class="form-label">Fecha</label>
-                        </div>
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <select class="form-select" id="genero" name="genero">
-                                {% for tmp in generos %}
-                                <option value="{{tmp.id_genero}}">{{tmp.genero}}</option>
+                            <select class="form-select" id="rol" name="rol">
+                                {% for tmp in rols %}
+                                <option value="{{tmp.id_rol}}">{{tmp.rol}}</option>
                                 {% endfor %}
                             </select>
-                            <label for="genero" class="form-label">Genero</label>
+                            <label for="rol" class="form-label">Rol</label>
                         </div>
-                        <div class="form-floating mb-3 w-25 mx-auto">
-                            <input type="email" class="form-control" id="correo" name="correo">
-                            <label for="correo" class="form-label">Correo</label>
-                        </div>
+  
                         <div class="form-floating mb-3 w-25 mx-auto">
                             <input type="password" class="form-control" id="password" name="password">
                             <label for="password" class="form-label">Contraseña</label>
